--- a/public/assets/css/style2.css
+++ b/public/assets/css/style2.css
@@ -629,6 +629,7 @@ a {
 .btn-primary {
     background-color: #007bff;
     border-color: #007bff;
+    padding-bottom: 10px;
 }
 
 .btn-primary.disabled {
